--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,11 @@ body
     font-family: monospace;
     padding:0;
     margin: 0;
+    color:black;
 }
+.bold-text {
+    font-weight: 700;
+  }
+  .semibold-text {
+    font-weight: 600;
+  }
